@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added a new attribute auto_trim and have four different values for it
+  - Enabled rw accessors for multiline_type and auto_chomp attributes
+  - Edited SpiceParser-3.t and Text-Parser.t to accommodate test changes
 
 0.903     2019-02-08 20:21:31-08:00 America/Los_Angeles
   - Reduce redundate Moose types, improve code coverage
